<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <!-- Перша група -->
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_main"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:titleTextColor="@android:color/white"
        android:iconTint="@android:color/white"
        tools:ignore="UnusedAttribute" />

    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/ic_trophy"
        android:title="@string/menu_top100"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:titleTextColor="@android:color/white"
        android:iconTint="@android:color/white"
        tools:ignore="UnusedAttribute" />

    <item
        android:id="@+id/nav_news"
        android:icon="@drawable/ic_catalog"
        android:title="@string/menu_catalog"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:titleTextColor="@android:color/white"
        android:iconTint="@android:color/white"
        tools:ignore="UnusedAttribute" />
    <item
        android:id="@+id/nav_library"
        android:icon="@drawable/ic_filter"
        android:title="@string/menu_search"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:titleTextColor="@android:color/white"
        android:iconTint="@android:color/white"
        tools:ignore="UnusedAttribute" />
    <item
        android:id="@+id/nav_cafeteria"
        android:icon="@drawable/ic_history"
        android:title="@string/menu_history"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:titleTextColor="@android:color/white"
        android:iconTint="@android:color/white"
        tools:ignore="UnusedAttribute" />
    <item
        android:id="@+id/nav_discord"
        android:icon="@drawable/ic_discord"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:title="@string/menu_discord"
        android:titleTextColor="@android:color/white"
        android:iconTint="@android:color/white"
        tools:ignore="UnusedAttribute" />

    <!-- Друга група -->
    <item android:id="@+id/nav_settings"
        android:icon="@drawable/toolbar_setings"
        android:title="@string/menu_settings"
        android:titleTextColor="@android:color/white"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:iconTint="@android:color/white"
        tools:ignore="UnusedAttribute" />

    <item android:id="@+id/nav_contact"
        android:icon="@drawable/ic_email"
        android:title="@string/menu_contact"
        android:titleTextColor="@android:color/white"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:iconTint="@android:color/white"
        tools:ignore="UnusedAttribute" />
</menu>
