<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/register_activity"
        android:textColor="@color/text"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textRegisterMessage"
        android:layout_width="316dp"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/register_info"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_background"
        android:hint="@string/input_name"
        android:inputType="textPersonName"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textRegisterMessage" />

    <EditText
        android:id="@+id/editTextRegisterEmail"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_background"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextName" />

    <EditText
        android:id="@+id/editTextRegisterPassword"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_background"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextRegisterEmail" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextRegisterPassword" />

    <TextView
        android:id="@+id/textNeedHelp"
        android:layout_width="207dp"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/support_center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
