<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/text"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLoginMessage"
        android:layout_width="316dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/input_userName_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <EditText
        android:id="@+id/editTextLoginEmail"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_background"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        android:textSize="14sp"
        android:paddingRight="16dp"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLoginMessage" />

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_background"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:textSize="14sp"
        android:paddingRight="16dp"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextLoginEmail" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:text="@string/login"
        android:radius="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextLoginPassword" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/buttonGoogleLogin"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin">

        <!-- Іконка Google -->
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/google" />

        <!-- Текст кнопки -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/textNeedackount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:gravity="center"
        android:text="@string/need_ak"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonGoogleLogin" />

    <TextView
        android:id="@+id/textNeedHelp"
        android:layout_width="207dp"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/support_center"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
